<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="240dp"
    android:layout_height="432dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QitaActivity2" 
    android:background="@drawable/bg_v3"
    android:id="@+id/qitagongneng"
    >
        <TextView 
         android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120px"
        android:textSize="17sp"
        android:layout_marginTop="-5px"
        android:textColor="#5b5f9b"
        android:text="@string/createaccount"
          />
            
  <LinearLayout 
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
     
      android:orientation="vertical"
      >
  		<TextView
  		
  		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
  		android:textColor="@android:color/white" 
        android:textSize="20sp" 
        android:text="@string/autuqianbanbufen"  
        android:layout_marginTop="50px"
  		    />  
  		<TextView
  		 android:id="@+id/firsthalf"   
  		android:layout_width="200px"
        android:layout_height="100px"
  		android:textColor="@android:color/white" 
        android:textSize="20sp" 
        android:text="0909023344236564345435345334"  
  		    />  
  		<TextView
  		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
  		android:textColor="@android:color/white" 
        android:textSize="20sp" 
        android:text="@string/shuruhoubanbufen"  
  		    /> 
  		<EditText
  		      android:id="@+id/secondhalf"  
  		android:layout_width="200px"
        android:layout_height="100px"
  		android:textColor="@android:color/black" 
        android:textSize="20sp"      
        android:background="@drawable/bg_edittext"
        android:numeric="integer"
        android:maxLength="39"
  		    />                     
   		 <LinearLayout 
	      android:layout_width="match_parent"
	      android:layout_height="wrap_content"
	      android:orientation="horizontal"
	      android:gravity="center_horizontal"
	      android:layout_marginTop="20px"
	          >
	     
		     <Button 
		      android:layout_width="100dp"
		      android:layout_height="45dp"
		      android:id="@+id/btn_1"
		      android:text="@string/quxiao"  
		      android:textSize="19sp"
              android:background="@drawable/button_bg"
              android:paddingBottom="3px"
              android:textColor="@android:color/white" 	
		    
		         />
		      <Button 
		      android:layout_width="100dp"
		      android:layout_height="45dp"
		      android:id="@+id/btn_2"
		      android:text="@string/queding" 
		       android:textSize="19sp"
              android:background="@drawable/button_bg"
              android:paddingBottom="3px"
              android:textColor="@android:color/white"     
		         />
		   </LinearLayout>
        
        
      
  </LinearLayout>
 
   

</FrameLayout>
