<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_h2"
    tools:context=".MainActivity" 
    android:orientation="vertical"
    android:gravity="left"
    android:layout_gravity="left"
    
    >
	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_gravity="left"
	    android:layout_marginLeft="180dp"
	    android:layout_marginTop="6dp"    
	    >
	
	     <TextView
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:text="@string/createaccount"
	      android:textSize="17sp"
	      android:layout_gravity="center_vertical"
	    
	      android:layout_marginLeft="40dp"
	      android:id="@+id/title"
	      android:textColor="#5b5f9b"
	        />
	    
	</LinearLayout>
	
	    <TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/inputpassword1"
	    android:textColor="@android:color/white" 
	    android:layout_marginLeft="20dp"
	    android:textSize="16sp"
	    android:layout_marginTop="15dp"
	   android:id="@+id/info1"
	    />
	 <EditText 
	     
	     android:layout_width="300dp"
	     android:layout_height="30dp"
	     android:id="@+id/pwd1"
	     android:inputType="textPassword"
		 android:maxLength="30"
		 android:digits="1234567890qwertyuiopasdfghjklzxcvbnmABCDEFGHIJKLMNOPQRSTUVWXYZ"	
		 android:imeOptions="actionDone"
		 android:layout_marginLeft="20dp"
		  android:background="@drawable/bg_edittext"    
	     /> 
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/inputpassword2"
	    android:textColor="@android:color/white" 
	      android:layout_marginLeft="20dp"
	     android:textSize="16sp"  
	     android:id="@+id/info2"
	    />
	 <EditText 
	     android:layout_width="300dp"
	     android:layout_height="30dp"
	     
	     android:id="@+id/pwd2"
	     android:inputType="textPassword"
		 android:maxLength="30"	
		 android:digits="1234567890qwertyuiopasdfghjklzxcvbnmABCDEFGHIJKLMNOPQRSTUVWXYZ" 
		 android:imeOptions="actionDone"
		 android:layout_marginLeft="20dp"	
		  android:background="@drawable/bg_edittext"  
	     />  
	 <LinearLayout 
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:orientation="horizontal"
	     android:layout_marginTop="8dp"
	     >
	      <Button
	     android:layout_width="120dp"
	     android:layout_height="50dp"
	     android:layout_marginLeft="30dp"
	     android:text="@string/clear"
	     android:id="@+id/btn_2"
	     android:background="@drawable/button_bg"
         android:textSize="19sp"
         android:textColor="@android:color/white" 
         android:paddingBottom="5dp"
	     />  	     
	      <Button
	     android:layout_width="120dp"
	     android:layout_height="50dp"
	     android:layout_marginLeft="40dp"
	     android:text="@string/confirm"
	     android:id="@+id/btn_1"
	     android:background="@drawable/button_bg"
         android:textSize="19sp"
         android:textColor="@android:color/white"
         android:paddingBottom="5dp" 
	     />  
	 </LinearLayout>         
		  
	     
	
 

</LinearLayout>