<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".iniAccountActivity" 
    android:background="@drawable/bg_v3"
    android:id="@+id/initaccount"
    >
        <TextView 
         android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:textSize="17sp"
        android:layout_marginTop="-5dp"
        android:textColor="#5b5f9b"
        android:text="@string/initaccount"
          />
            
  <LinearLayout 
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"     
      android:orientation="vertical"
      >
            
      <Button 
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/button_bg"
        android:text="@string/autocreate"
        android:id="@+id/auto"
        android:textColor="@android:color/white" 
        android:textSize="20sp"
        android:layout_marginTop="70dp"
	    android:layout_marginLeft="4dp"
	    android:layout_gravity="center_horizontal"
	    android:paddingBottom="5dp"
          />
     
       <Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/manualcreate"
        android:id="@+id/manual"
        android:textColor="@android:color/white" 
        android:textSize="20sp"
        android:layout_marginTop="50dp"
	    android:layout_marginLeft="4dp"
	    android:layout_gravity="center_horizontal"
	     android:paddingBottom="5dp"	    
          />
         <Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/importaccount"
       	android:id="@+id/import_account"
        android:textColor="@android:color/white" 
        android:textSize="20sp"
        android:layout_marginTop="8dp"
	    android:layout_marginLeft="4dp"
	    android:layout_gravity="center_horizontal"
	     android:paddingBottom="5dp"
          />
        
      
  </LinearLayout>
 
   

</FrameLayout>
