<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QitaActivity2" 
    android:background="@drawable/bg_v3"
    android:id="@+id/accountmanage"
    >
        <TextView 
         android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:textSize="17sp"
        android:layout_marginTop="7dp"
        android:textColor="#5b5f9b"
        android:text="@string/accountmanage"
          />
            
  <LinearLayout 
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"      
      android:orientation="vertical"
      android:layout_marginTop="0dp"
      >
            
        <Button 
        android:layout_width="156px"
        android:layout_height="43px"
        android:background="@drawable/button_bg"
        android:text="@string/backupaccount"
        android:id="@+id/backup"
        android:textColor="@android:color/white" 
        android:textSize="20sp"
        android:layout_marginTop="50px"
	    android:layout_marginLeft="4px"
	    android:layout_gravity="center_horizontal"
	    android:paddingBottom="5px"
          />
        
          <Button 
        android:layout_width="156px"
        android:layout_height="86px"
         android:background="@drawable/button_bg"
        android:text="@string/btn_changepwd"
        android:id="@+id/changepwd"
        android:textColor="@android:color/white" 
        android:textSize="20sp"
        android:layout_marginTop="8px"
	    android:layout_marginLeft="4px"
	    
          />
          <!-- 
       <Button 
        android:layout_width="156px"
        android:layout_height="43px"
        android:background="@drawable/button_bg"
        android:text="@string/switchaccount"
        android:id="@+id/switchaccount"
        android:textColor="@android:color/white" 
        android:textSize="20sp"
        android:layout_marginTop="8px"
	    android:layout_marginLeft="4px"
	    android:layout_gravity="center_horizontal"
	     android:paddingBottom="5px"
          />
         -->
        
       
         <Button 
        android:layout_width="156px"
        android:layout_height="43px"
        android:background="@drawable/button_bg"
        android:text="@string/importaccount"
       	android:id="@+id/import_account"
        android:textColor="@android:color/white" 
        android:textSize="20sp"
        android:layout_marginTop="8px"
	    android:layout_marginLeft="4px"
	    android:layout_gravity="center_horizontal"
	     android:paddingBottom="5px"
          />
         <Button 
        android:layout_width="156px"
        android:layout_height="43px"
        android:background="@drawable/button_bg"
        android:text="@string/btn_newaccount"
       	android:id="@+id/new_account"
        android:textColor="@android:color/white" 
        android:textSize="20sp"
        android:layout_marginTop="8px"
	    android:layout_marginLeft="4px"
	    android:layout_gravity="center_horizontal"
	     android:paddingBottom="5px"
          />
        
      
  </LinearLayout>
 	
   

</FrameLayout>
